2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_scope.py:
	* test/expected/nested:
	* test/input/nested.py:
	  Add a test where pychecker lets the scope of one nested function
	  bleed into the next one.

2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/unused_import.py:
	  Change to an import that exists on older pythons.
	* test/expected/unused_import:
	  Adapt expected output.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/unused_import.py:
	  Add an import and a function argument shadowing that name.
	  This used to fail up to pychecker 0.8.19, but now correctly
	  triggers
	* test/expected/unused_import:
	* test/test_internal.py:
	  Adjust assertions and expected output.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  I'm sorry, I meant pre-2.6

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  Pre-2.5 __package__ is not a module variable.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Don't complain about not finding real modules when they start
	  with underscore - they probably do not want to be found.
	* test/expected/test_zope_interface_q:
	  Adjust output.

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Allow passing a config to _check() and use it.
	* test/test_internal.py:
	  Ignore standard library.  We don't care about xml.sax

2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Report warning when from X import * imports symbols that
	  get shadowed by later class definitions.
	  In _BUILD_CLASS, looks to me like we should push the name
	  on the stack, not the dict.
	* pychecker/msgs.py:
	  Add the error message.
	* pychecker/pcmodules.py:
	  Track where imports happen in imported instance variable.