@@ -1,0 +1,8 @@
+# -*- Mode: Python -*-
+# vi:si:et:sw=4:sts=4:ts=4
+
+from __future__ import division
+
+def divide(x):
+    x /= 16
+    return x
